--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "this is a page for Jakub Mieczkowski lab, we are computatio
 
 
 # URL
-url:                jakubmie.github.io
+url:                mieczkowskilab.org
 baseurl:            
 #baseurl:            "" #For Root Domain
 permalink:          /:year/:month/:day/:title.html
